**  denotes quite substantial/important changes
*** denotes really big changes 

1.4-0

** Smooth terms can now be linked in order that they have the same 
   smoothing parameters (and, by default, bases). Linkage is specified
   using the `id' argument to `s' or `te'. Terms with the same `id' value
   will have the same smoothing parameter(s).

** Model terms can now include linear functionals of smooths, by supplying 
   matrix arguments and matrix `by' variables to model smooth terms. This 
   allows, for example, a model to depend on the integral of a smooth 
   function, or its derivative. See ?linear.functional.terms. Main code 
   changes are in `smoothCon' and `predMat'.

** Negative binomial handling changed. `negbin' family added: adapted from 
   MASS to work with gam outer iteration fitting. `gam.negbin' fitting 
   routine added in order to enable use of `negbin' with outer iteration.
   See ?negbin for details. MASS families no longer supported. 
   `nb.theta.mult' removed from `gam.control'.

** `by' variables can now be factor variables.

** `smoothCon' now handles `by' variables and centering constraints 
   automatically, removing the need for smooth constructors to do so.
   `PredMat' handles `by' variables automatically. Users can over-ride 
   this behaviour when adding smooth classes, if needed - see 
   documentation.

** `gamm' now supports nested smooth terms, and uses the same, constraint 
   absorbed, parameterization as `gam'.

* `magic' and `gam.fit3' now allow log smoothing parameters to be a 
  linear transformation of a smaller set of underlying smoothing parameters.

* `mgcv' based fitting has been removed as an option in `gam', as has 
  Pearson based GCV. In consequence `am' argument removed from 
  `gam.method' and `globit' removed from `gam.control'.

* `get.var' now coerces matrix values to numeric vectors, to facilitate 
   the handling of linear functionals of smooths.
